Updating main.js to call ZAFClient 'top_bar'

--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,9 @@
           "width": "800px",
           "height": "770px"
         }
+      },
+      "ticket_sidebar": {
+        "autoLoad": false
       }
     }
   },
